Fixed img sizing issue while viewing on mobile

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -27,4 +27,5 @@ body {
 }
 .photo img{
   border:2px solid black;
+  max-width: 100%;
 }
